Samples
	* Added Conway's Game of Life sample using compute shaders.

Math
	* Fixed a bug in Matrix3x2.TransformPoint.

DXGI
	* Fixed a bug that caused certain types like Factory1 to be unable to be a target of GetParent<T>.

Direct3D 10
	* Added an overload to Texture.Map to take an array slice index.
	* Added a Factory property to the Device to make it easy to get the associated factory.

Direct3D 11
	* Added a Factory property to the Device to make it easy to get the associated factory.

Multimedia
	* Extended the WaveStream class to support ADPCM formats.

DirectInput
	* Changed DirectInput DeviceInstance to properly mask out the DeviceType flag.
	* Added missing DirectInput buffered data functionality.

RawInput
	* Added support for custom message handling. Allows the use of WPF and other non-Winforms frameworks.